--- a/package.json
+++ b/package.json
@@ -1,24 +1,16 @@
 {
-  "name": "atividade",
+  "name": "estrutura2atividade",
   "version": "1.0.0",
-  "description": "",
+  "description": "<<<<<<< HEAD\r 1. Desenvolva um sistema de gerenciamento de estoque para uma loja de\r conveniência. O sistema deve permitir que o usuário adicione novos produtos ao\r estoque e remova-os quando necessário. Além disso, o sistema deve ser capaz de\r recuperar informações sobre um produto específico rapidamente.\r Implemente uma pilha para rastrear as adições e remoções mais recentes de\r produtos, e uma tabela hash para armazenar informações detalhadas sobre cada\r produto, como nome, preço e quantidade em estoque. Como parte da solução,\r utilize o método de multiplicação para implementar a tabela hash e resolva colisões\r com listas encadeadas em um vetor.",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node server.ts",
-    "start:dev": "tsx watch server.ts"
+    "start": "ts-node main.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.12.3",
-    "ts-node": "^10.9.2",
-    "tsx": "^4.7.1",
-    "typescript": "^5.4.3"
-  },
   "dependencies": {
-    "express": "^4.19.2",
-    "mongoose": "^8.2.4"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.4"
   }
 }
