--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "main.js",
   "type": "module",
   "scripts": {
-    "start": "node main.js"
+    "start1": "node ./Q1/main.js",
+    "start2": "node ./Q2/main.js",
+    "start3": "node ./Q3/main.js"
   },
   "keywords": [],
   "author": "",
